March 2013 4.1
  - updated EDU person module (RFE 3599128)
  - fixed bugs:
   -> changed user and group size limits (3601649)


06.01.2013 4.0.1
  - support additional LDAP filters for account types
  - allow to hide account types (that are required by other account types)
  - fixed bugs:
   -> missing directories config/pdf and config/profiles on fresh installations


17.12.2012 4.0
  - account profiles and PDF structures are now bound to server profile
  - IMAP: support "/" as path separator (RFE 3575692)
  - show server profile name on config pages (RFE 3579768)
  - LAM Pro:
   -> Custom fields for admin interface
   -> MIT Kerberos support
   -> Qmail user support


25.09.2012 3.9
  - Kolab 2.4 support
  - Puppet support
  - LAM Pro
   -> support RFC2307bis automount entries
   -> read-only fields in self service
  - fixed bugs
   -> Hidden tools are still shown on the "Tools" page (3546092)


19.07.2012 3.8
  - quick (un)lock for users
  - allow to disable tools
  - LAM Pro:
   -> Custom fields module allows to manage custom LDAP attributes in Self Service
   -> Self service now supports user self registration
   -> Separate group of names module for users allows to manage memberships if Unix module is not used (RFE 3504429)
   -> Named object module for groups (used for rfc2307bis schema)
   -> Password change page allows account (un)locking
   -> Allow to send password mails on user edit page
   -> Custom scripts: supports manual scripts that can be run from account edit pages
   -> Zarafa 7.1 support (proxy URL for servers)
  - fixed bugs
   -> Asterisk extensions with same name (3528288)


25.03.2012 3.7
  - Login: support bind user for login search
  - Personal: added labeledURI and cosmetic changes, description is now multi-valued (RFE 3446363)
  - Asterisk extensions: group extension entries by name and context
  - File upload:
   -> support custom scripts postCreate (LAM Pro)
   -> PDF export
  - New translation: Slovakian